# emu6502

./: .gitignore  Cargo.toml  LICENSE  README.md
asm6502/: Cargo.toml
asm6502/examples/: lex.rs  lex2.rs  parse.rs  resolve.rs
asm6502/src/: lexer.rs  lib.rs  parser.rs  types.rs
asm6502/src/lexer/: mod.rs  tests.rs
asm6502/src/parser/: mod.rs  tests.rs  token.rs  token_parsers.rs  types.rs
asm6502/src/parser/expression/: mod.rs  tests.rs
asm6502/src/parser/instruction/: mod.rs  tests.rs
asm6502/src/resolver/: mod.rs  tests.rs
asm6502/tests/: lexer.rs
asm6502/tests/fixtures/: all_tokens.txt  invalid_tokens.a65
asm6502/tests/fixtures/lexer/: instruction_tokens.txt
asm6502/tests/snapshots/: lexer__all_tokens.snap  lexer__instruction_tokens.snap  lexer__invalid_tokens.snap
disasm6502/: Cargo.toml
disasm6502/examples/: disasm.rs  disasm_full.rs  disasm_iter.rs
disasm6502/src/: lib.rs
emu6502/: Cargo.toml
emu6502/src/: addressing_modes.rs  cpu.rs  debugger.rs  functional_tests.rs  lib.rs  mapper.rs
emu6502/src/opcodes/: mod.rs  tests.rs
examples/: step.rs
shared6502/: Cargo.toml
shared6502/src/: lib.rs
src/: addressing_modes.rs  cpu.rs  functional_tests.rs  lib.rs  opcodes.rs  util.rs
src/opcodes/: mod.rs  tests.rs
test_roms/: 6502_functional_test.a65  6502_functional_test.lst
ui/: Cargo.toml  Makefile.toml  README.md  index.html  styles.css  styles.css.map  styles.scss  util.js
ui/icons/: README.md  config.json
ui/src/: console_buffer.rs  lib.rs
