[package]
name = "asm6502"
version = "0.1.0"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared6502 = {path = "../shared6502" }
nom = "5.0"
regex = "1"
lazy_static = "1.4.0"
fnv = "1.0.6"

[dev-dependencies]
insta = "0.12.0"