[package]
name = "ui"
version = "0.1.0"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.3.6"
wasm-bindgen = "^0.2.42"
log = "0.4.6"
wasm-logger = "0.1.5"

[dependencies.web-sys]
version = "0.3.19"
features = [ "Event", "EventTarget", "File", "FileList", "FileReader", "HtmlInputElement" ]
